tests/baselines/reference/jsFileCompilationNonNullAssertion.errors.txt
/src/a.js(1,1): error TS8013: 'non-null assertions' can only be used in a .ts file.


==== /src/a.js (1 errors) ====
    0!
    ~~
!!! error TS8013: 'non-null assertions' can only be used in a .ts file.
    